--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1469077891";
+    const serviceWorkerVersion = "1609567905";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+
 <body>
   <style>
     body {
@@ -155,7 +156,7 @@
       });
     });
   </script>
-  <div class="main-content" id="loader-content">
+  <!-- <div class="main-content" id="loader-content">
     <div class="loader">
       <span></span>
       <span></span>
@@ -163,6 +164,6 @@
       <span></span>
     </div>
     <img src="main-icon.png" />
-  </div>
+  </div> -->
 </body>
 </html>
