--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -40,10 +40,10 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4210451424";
+    const serviceWorkerVersion = "471531722";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="/main.dart.js" defer></script>
 </head>
 
 <body>
@@ -135,7 +135,7 @@
       border-radius: 50%;
     }
   </style> -->
-  <script>
+  <!-- <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -149,7 +149,29 @@
         }
       });
     });
-  </script>
+  </script> -->
+  <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('flutter-first-frame', function () {
+          navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');
+          navigator.serviceWorker.register('flutter_service_worker.js?v=471531722');
+        });
+      }
+      window.addEventListener('load', function(ev) {
+        // Download main.dart.js
+        entrypointUrl: "/main.dart.js",
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+          onEntrypointLoaded: function (engineInitializer) {
+            engineInitializer.initializeEngine().then(function (appRunner) {
+              appRunner.runApp();
+            });
+          }
+        });
+      });
+    </script>
   <!-- <div class="main-content" id="loader-content">
     <div class="loader">
       <span></span>
