--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -35,12 +34,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-  <title>My Stacked Application</title>
+  <title>My flutter</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "471531722";
+    const serviceWorkerVersion = "2179396361";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="/main.dart.js" defer></script>
@@ -152,14 +151,14 @@
   </script> -->
   <script>
     if ('serviceWorker' in navigator) {
-        window.addEventListener('flutter-first-frame', function () {
-          navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');
-          navigator.serviceWorker.register('flutter_service_worker.js?v=471531722');
-        });
-      }
-      window.addEventListener('load', function(ev) {
-        // Download main.dart.js
-        entrypointUrl: "/main.dart.js",
+      window.addEventListener('flutter-first-frame', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2179396361');
+      });
+    }
+    window.addEventListener('load', function (ev) {
+      // Download main.dart.js
+      entrypointUrl: "/main.dart.js",
         _flutter.loader.loadEntrypoint({
           serviceWorker: {
             serviceWorkerVersion: serviceWorkerVersion,
@@ -170,8 +169,8 @@
             });
           }
         });
-      });
-    </script>
+    });
+  </script>
   <!-- <div class="main-content" id="loader-content">
     <div class="loader">
       <span></span>
