--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="./">
+  <base href="https://eldiyar0220.github.io/flutter_responsive_site/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,19 +35,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-  <title>My flutter</title>
+  <title>My Stacked Application</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2179396361";
+    const serviceWorkerVersion = "3426180758";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="/main.dart.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
-
 <body>
-  <!-- <style>
+  <style>
     body {
       background-color: #0A0A0A;
       height: 100vh;
@@ -133,45 +133,29 @@
       background: #191919;
       border-radius: 50%;
     }
-  </style> -->
-  <!-- <script>
-    window.addEventListener('load', function(ev) {
+  </style>
+  <script>
+    function delay(time) {
+      return new Promise(resolve => setTimeout(resolve, time));
+    }
+
+    window.addEventListener('load', function (ev) {
+      var loaderContent = document.querySelector('#loader-content');
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
         }
+      }).then(function (engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(async function (appRunner) {
+        loaderContent.style.opacity = "0";
+        await delay(400);
+        await appRunner.runApp();
       });
-    });
-  </script> -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2179396361');
-      });
-    }
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      entrypointUrl: "/main.dart.js",
-        _flutter.loader.loadEntrypoint({
-          serviceWorker: {
-            serviceWorkerVersion: serviceWorkerVersion,
-          },
-          onEntrypointLoaded: function (engineInitializer) {
-            engineInitializer.initializeEngine().then(function (appRunner) {
-              appRunner.runApp();
-            });
-          }
-        });
     });
   </script>
-  <!-- <div class="main-content" id="loader-content">
+  <div class="main-content" id="loader-content">
     <div class="loader">
       <span></span>
       <span></span>
@@ -179,7 +163,6 @@
       <span></span>
     </div>
     <img src="main-icon.png" />
-  </div> -->
+  </div>
 </body>
-
 </html>
