--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://eldiyar0220.github.io/flutter_responsive_site/">
+  <!-- <base href="https://eldiyar0220.github.io/flutter_responsive_site/"> -->
+  <!-- <base href="https://eldiyar0220.github.io/flutter_responsive_site/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -40,7 +41,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3426180758";
+    const serviceWorkerVersion = "234398562";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
