--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "234398562";
+    const serviceWorkerVersion = "865086198";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+
 <body>
   <style>
     body {
@@ -151,7 +152,7 @@
         return engineInitializer.initializeEngine();
       }).then(async function (appRunner) {
         loaderContent.style.opacity = "0";
-        await delay(400);
+        // await delay(400); ////
         await appRunner.runApp();
       });
     });
@@ -166,4 +167,5 @@
     <img src="main-icon.png" />
   </div>
 </body>
+
 </html>
